--- a/about.html
+++ b/about.html
@@ -10,27 +10,27 @@
 <body>
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-21.jpeg" alt="">
+            <img src="img/img-21.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-12.PNG" alt="">
+            <img src="img/img-12.PNG" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <main data-scroll-section>
             <div class="pic-text-1 about-us" id="pt-1" data-scroll data-scroll-speed="3">
                 <div class="about-us-wrapper">
-                    <img src="../img/img-24.jpeg" alt="">
+                    <img src="img/img-24.jpeg" alt="">
                     <div class="text-1">
                         <h1><span>SA</span>PAR Contemporary 
                         </h1>
@@ -93,7 +93,7 @@
             </div>
             <div class="pic-text-3 about-us" data-scroll>
                 <div class="about-us-wrapper">
-                    <img src="../img/img-22.jpeg" alt="" data-scroll>
+                    <img src="img/img-22.jpeg" alt="" data-scroll>
                     <p data-scroll data-scroll-speed="3"><span>SAPAR Contemporary</span> has also launched a Neo-Nomad Incubator focused on the emerging art scene and cultural traditions of Central Asia. The Incubator program is headquartered in Almaty, Kazakhstan. The first edition of the Neo Nomad Incubator evolved around the notion of traditional and digital nomadism and aesthetics connected to nomadic experiences. The project explored the relationship between traditional nomadic cultures of Central Asia and Middle East, and realities of migration, globalization and hyper mobility. Current incubator efforts are  going towards unique art trends emerging in Central Asia, South East Russia and Mongolia.  SAPAR Contemporary artists' works have been featured in international Biennials and are included in private and public collections around the world; among them are the MoMA, LACMA, Art Institute of Chicago, Guggenheim, M+,  and many others.
                     </p>
                     <div class="down-arrow">
@@ -116,7 +116,7 @@
             </div>
             <div class="about-us-wrapper" data-scroll>
                 <div class="small-pic-slogan">
-                    <img src="../img/img-62.jpeg" alt="">
+                    <img src="img/img-62.jpeg" alt="">
                     <h1 data-scroll data-scroll-direction="horizontal" data-scroll-speed="-5">ART CHANGE Life</h1>
                 </div> 
             </div>
