--- a/artists-page.html
+++ b/artists-page.html
@@ -10,27 +10,27 @@
 <body>
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-21.jpeg" alt="">
+            <img src="img/img-21.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-12.PNG" alt="">
+            <img src="img/img-12.PNG" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -95,7 +95,7 @@
             <section data-scroll-section>
                 <div class="poster-text-block artist-work">
                     <a href="open-painting.html">
-                        <img src="../img/img-76.jpeg" alt="">
+                        <img src="img/img-76.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="poster-text-block artist-work">
                     <a href="open-painting.html">
-                        <img src="../img/img-107.jpg" alt="">
+                        <img src="img/img-107.jpg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-72.jpeg" alt="">
+                        <img src="img/img-72.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-62.jpeg" alt="">
+                        <img src="img/img-62.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-61.jpeg" alt="">
+                        <img src="img/img-61.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-79.jpeg" alt="">
+                        <img src="img/img-79.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-64.jpeg" alt="">
+                        <img src="img/img-64.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="poster-text-block artist-work" data-scroll>
                     <a href="open-painting.html">
-                        <img src="../img/img-75.jpeg" alt="">
+                        <img src="img/img-75.jpeg" alt="">
                     </a>
                     <div class="artist-work-intro">
                         <h1>Phoebe Boswell</h1>
