--- a/enquire-form.html
+++ b/enquire-form.html
@@ -22,7 +22,7 @@
                 <div class="form-le">
                     <div class="paint-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-71.jpeg" alt="">
+                            <img src="img/img-71.jpeg" alt="">
                         </a>
                         <div class="paint-info">
                             <h1>The Flower and People, 2012</h1>
