--- a/exhibition-page.html
+++ b/exhibition-page.html
@@ -12,27 +12,27 @@
 <body>
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-21.jpeg" alt="">
+            <img src="img/img-21.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-12.PNG" alt="">
+            <img src="img/img-12.PNG" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -87,7 +87,7 @@
                 <div class="c-fixed_target" id="fixed-target"></div>
                 <div class="c-fixed big-hero exhi-hero" data-scroll data-scroll-sticky data-scroll-target="#fixed-target">
                     <div class="exhi-sm-pic center">
-                        <img src="../img/img-172.PNG" alt="" data-scroll data-scroll-speed="-2">
+                        <img src="img/img-172.PNG" alt="" data-scroll data-scroll-speed="-2">
                     </div>
                 </div>
             </div>
@@ -103,9 +103,9 @@
                 <div class="c-fixed_wrapper" data-scroll data-scroll-repeat>
                     <div class="c-fixed_target" id="fixed-target-2"></div>
                     <div class="c-fixed exhi-img" data-scroll data-scroll-sticky data-scroll-target="#fixed-target-2">
-                        <img src="../img/img-157.PNG" alt="">
-                        <img src="../img/img-158.PNG" alt="">
-                        <img src="../img/img-159.PNG" alt="">
+                        <img src="img/img-157.PNG" alt="">
+                        <img src="img/img-158.PNG" alt="">
+                        <img src="img/img-159.PNG" alt="">
                     </div>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                 <div class="c-fixed_wrapper" data-scroll data-scroll-repeat>
                     <div class="c-fixed_target" id="fixed-target-3"></div>
                     <div class="c-fixed exhi-img exhi-img-2" data-scroll data-scroll-sticky data-scroll-target="#fixed-target-3">
-                        <img src="../img/img-156.PNG" alt="">
-                        <img src="../img/img-162.PNG" alt="">
-                        <img src="../img/img-161.PNG" alt="">
+                        <img src="img/img-156.PNG" alt="">
+                        <img src="img/img-162.PNG" alt="">
+                        <img src="img/img-161.PNG" alt="">
                     </div>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                 <div class="c-fixed_wrapper" data-scroll data-scroll-repeat>
                     <div class="c-fixed_target" id="fixed-target-4"></div>
                     <div class="c-fixed exhi-img exhi-img-3" data-scroll data-scroll-sticky data-scroll-target="#fixed-target-4">
-                        <img src="../img/img-150.PNG" alt="">
-                        <img src="../img/img-160.PNG" alt="">
+                        <img src="img/img-150.PNG" alt="">
+                        <img src="img/img-160.PNG" alt="">
                     </div>
                 </div>
             </div>
