--- a/hambur-menu.html
+++ b/hambur-menu.html
@@ -15,27 +15,27 @@
             <div class="ham-line"></div>
         </div>
         <div class="pic-menu sweep-to-bottom" >
-            <img src="../img/img-114.jpeg" alt="">
+            <img src="img/img-114.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-64.jpeg" alt="">
+            <img src="img/img-64.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-89.png" alt="">
+            <img src="img/img-89.png" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-61.jpeg" alt="">
+            <img src="img/img-61.jpeg" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-107.jpg" alt="">
+            <img src="img/img-107.jpg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
