--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-61.jpeg" alt="">
+            <img src="img/img-61.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-43.jpg" alt="">
+            <img src="img/img-43.jpg" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-142.jpeg" alt="">
+            <img src="img/img-142.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -95,7 +95,7 @@
                 <p>Éric Bourr<span>et</span></p>
                 <p>Walks Alone</p>
             </h1>
-            <a href="exhibition-page.html" data-scroll data-scroll-speed="-1" ><img src="../img/img-43.jpg" alt=""></a>
+            <a href="exhibition-page.html" data-scroll data-scroll-speed="-1" ><img src="img/img-43.jpg" alt=""></a>
             <h3>
                 <p data-scroll data-scroll-speed="-2">by Uuriintuya Dagvasambuu Acrylic on canvas 39 3/8 x 39 3/8 in 100 x 100 cm</p>
                 <p data-scroll data-scroll-speed="-2">The Flower and People 2012</p>
@@ -105,14 +105,14 @@
             <div class="wrapper">
                 <div data-scroll data-scroll-speed="1" class="summary">
                     <ul>
-                        <a href="view-room.html">01. View Room<img src="../img/img-11.PNG" alt="">
+                        <a href="view-room.html">01. View Room<img src="img/img-11.PNG" alt="">
                         </a>
-                        <a href="exhibitions.html">02. Exhibitions<img src="../img/img-52.PNG" alt="">
+                        <a href="exhibitions.html">02. Exhibitions<img src="img/img-52.PNG" alt="">
                         </a>
-                        <a href="projects.html">03. Projects<img src="../img/img-13.PNG" alt=""></a>
-                        <a href="artists.html">04. Artists<img src="../img/img-14.PNG" alt=""></a>
-                        <a href="art-fairs.html">05. Art Fairs<img src="../img/img-15.PNG" alt=""></a>
-                        <a href="incubators.html">06. Incubators<img src="../img/img-12.PNG" alt=""></a> 
+                        <a href="projects.html">03. Projects<img src="img/img-13.PNG" alt=""></a>
+                        <a href="artists.html">04. Artists<img src="img/img-14.PNG" alt=""></a>
+                        <a href="art-fairs.html">05. Art Fairs<img src="img/img-15.PNG" alt=""></a>
+                        <a href="incubators.html">06. Incubators<img src="img/img-12.PNG" alt=""></a> 
                     </ul>
                 </div>
             </div>
@@ -142,28 +142,28 @@
                     <h2>
                         <span>01</span><span>.</span> Exhibition
                     </h2>
-                    <img src="../img/img-12.PNG" alt="">
+                    <img src="img/img-12.PNG" alt="">
                 </a>
                 <a class="sec4-con" href="exhibition-page.html">
                     <h2>
                         <span>02</span><span>.</span>
                         Exhibition
                     </h2>
-                    <img src="../img/img-160.PNG" alt="">
+                    <img src="img/img-160.PNG" alt="">
                 </a>
                 <a class="sec4-con" href="exhibition-page.html">
                     <h2>
                         <span>03</span><span>.</span>
                         Exhibition
                     </h2>
-                    <img src="../img/img-159.PNG" alt="">
+                    <img src="img/img-159.PNG" alt="">
                 </a>
                 <a class="sec4-con" href="exhibition-page.html">
                     <h2>
                         <span>04</span><span>.</span>
                         Exhibition
                     </h2>
-                    <img src="../img/img-155.PNG" alt="">
+                    <img src="img/img-155.PNG" alt="">
                 </a>
             </div>
             <div class="right-aside" data-scroll data-scroll-sticky data-scroll-target="#sm-img-stick">
