--- a/open-painting.html
+++ b/open-painting.html
@@ -19,7 +19,7 @@
             <img src="../svg/right-arr.svg" alt="">
         </div> 
         <div class="open-paint paint-container">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <div class="paint-info">
                 <h1>The Flower and People, 2012</h1>
                 <h2>by Uuriintuya Dagvasambuu</h2>
