--- a/view-room-page.html
+++ b/view-room-page.html
@@ -10,27 +10,27 @@
 <body>
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-21.jpeg" alt="">
+            <img src="img/img-21.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-12.PNG" alt="">
+            <img src="img/img-12.PNG" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -101,7 +101,7 @@
             <section>
                 <div class="poster-text-block artist-work" id="vr-pos-block">
                     <a href="open-painting.html">
-                        <img src="../img/img-151.PNG" alt="">
+                        <img src="img/img-151.PNG" alt="">
                     </a>
                     <div class="artist-work-intro" id="vr-intro">
                         <h1>Dilyara Kaipova</h1>
@@ -114,7 +114,7 @@
                 <div class="pro-grid">
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-10.PNG" alt="">
+                            <img src="img/img-10.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -126,7 +126,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-11.PNG" alt="">
+                            <img src="img/img-11.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -138,7 +138,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-12.PNG" alt="">
+                            <img src="img/img-12.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -150,7 +150,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-13.PNG" alt="">
+                            <img src="img/img-13.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -168,7 +168,7 @@
             <section>
                 <div class="poster-text-block artist-work" id="vr-pos-block">
                     <a href="open-painting.html">
-                        <img src="../img/img-151.PNG" alt="">
+                        <img src="img/img-151.PNG" alt="">
                     </a>
                     <div class="artist-work-intro" id="vr-intro">
                         <h1>Dilyara Kaipova</h1>
@@ -181,7 +181,7 @@
                 <div class="pro-grid">
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-10.PNG" alt="">
+                            <img src="img/img-10.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -193,7 +193,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-11.PNG" alt="">
+                            <img src="img/img-11.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -205,7 +205,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-12.PNG" alt="">
+                            <img src="img/img-12.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -217,7 +217,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-13.PNG" alt="">
+                            <img src="img/img-13.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -235,7 +235,7 @@
             <section>
                 <div class="poster-text-block artist-work" id="vr-pos-block">
                     <a href="open-painting.html">
-                        <img src="../img/img-151.PNG" alt="">
+                        <img src="img/img-151.PNG" alt="">
                     </a>
                     <div class="artist-work-intro" id="vr-intro">
                         <h1>Dilyara Kaipova</h1>
@@ -248,7 +248,7 @@
                 <div class="pro-grid">
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-10.PNG" alt="">
+                            <img src="img/img-10.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -260,7 +260,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-11.PNG" alt="">
+                            <img src="img/img-11.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -272,7 +272,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-12.PNG" alt="">
+                            <img src="img/img-12.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
@@ -284,7 +284,7 @@
                     </div>
                     <div class="pro-container">
                         <a href="open-painting.html">
-                            <img src="../img/img-13.PNG" alt="">
+                            <img src="img/img-13.PNG" alt="">
                         </a>
                         <div class="pro-info">
                             <a href="open-painting.html"> 
