--- a/view-room.html
+++ b/view-room.html
@@ -10,27 +10,27 @@
 <body>
     <div class="ham-menu-page">
         <div class="pic-menu" id="menu-1">
-            <img src="../img/img-29.jpeg" alt="">
+            <img src="img/img-29.jpeg" alt="">
             <a href="view-room.html">Viewing Rooms</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-45.jpeg" alt="">
+            <img src="img/img-45.jpeg" alt="">
             <a href="exhibitions.html">Exhibitions</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-15.PNG" alt="">
+            <img src="img/img-15.PNG" alt="">
             <a href="incubators.html">Incubators</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-21.jpeg" alt="">
+            <img src="img/img-21.jpeg" alt="">
             <a href="projects.html">Projects</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-12.PNG" alt="">
+            <img src="img/img-12.PNG" alt="">
             <a href="artists.html">Artists</a>
         </div>
         <div class="pic-menu sweep-to-bottom">
-            <img src="../img/img-71.jpeg" alt="">
+            <img src="img/img-71.jpeg" alt="">
             <a href="art-fairs.html">Art Fairs</a>
         </div>
     </div>
@@ -76,7 +76,7 @@
         </div>
         <main data-scroll-section>
             <div class="poster-text-block">
-                <img src="../img/img-51.PNG" alt="">
+                <img src="img/img-51.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span>be Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there. </p>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="poster-text-block">
-                <img src="../img/img-53.PNG" alt="">
+                <img src="img/img-53.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span>be Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there.</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="poster-text-block">
-                <img src="../img/img-52.PNG" alt="">
+                <img src="img/img-52.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span>be Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there.</p>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="poster-text-block">
-                <img src="../img/img-48.PNG" alt="">
+                <img src="img/img-48.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span>be Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there.</p>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="poster-text-block">
-                <img src="../img/img-47.PNG" alt="">
+                <img src="img/img-47.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span>be Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there.</p>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="poster-text-block">
-                <img src="../img/img-49.PNG" alt="">
+                <img src="img/img-49.PNG" alt="">
                 <div class="text-block">
                     <a href="view-room-page.html">Pho<span>e</span> Boswell</a>
                     <p>Phoebe Boswell (Kenya). Underpinned by a transient and diasporic consciousness, Phoebe Boswell's practice speaks from the porous space between here and there.</p>
