--- a/view-room-page.html
+++ b/view-room-page.html
@@ -94,7 +94,7 @@
                         <p data-scroll data-scroll-speed="4">STILL LIFE A Taxonomy of Being A capsule of drawings by Phoebe Boswell (Kenya/UK) made during the UK's third national lockdown Sapar Contemporary is delighted to present Still Life: A Taxonomy of Being, the gallery's second solo exhibition of work by Phoebe Boswell. The works on paper are installed so as to create an immersive experience that also features video with a soundtrack of breathing. The works encapsulate a year in which breathing became perilous and, for many, technologies and devices functioned as the primary mediators of seeing, being, and socializing.</p>   
                     </div>
                     <div class="down-arrow">
-                        <img src="../svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
+                        <img src="svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
                     </div>
                 </div>
             </section>
@@ -163,7 +163,7 @@
                 </div>
             </section>
             <div class="down-arrow">
-                <img src="../svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
+                <img src="svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
             </div>
             <section>
                 <div class="poster-text-block artist-work" id="vr-pos-block">
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="down-arrow">
-                    <img src="../svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
+                    <img src="svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="3">
                 </div>
             </section>
             <section>
@@ -300,10 +300,10 @@
         </main>
         <footer class="page-footer" data-scroll-section> 
             <div class="social-media page-fo-social">
-                <img src="../svg/ins-bla.svg" alt="">
-                <img src="../svg/snap-bla.svg" alt="">
-                <img src="../svg/youtube-bla.svg" alt="">
-                <img src="../svg/lin-bla.svg" alt="">
+                <img src="svg/ins-bla.svg" alt="">
+                <img src="svg/snap-bla.svg" alt="">
+                <img src="svg/youtube-bla.svg" alt="">
+                <img src="svg/lin-bla.svg" alt="">
             </div>
             <div class="page-fo-copyright">
                 <p>© 2022 SAPAR Gallery</p>
@@ -326,9 +326,9 @@
             </div>
         </footer>
     </div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
