--- a/view-room.html
+++ b/view-room.html
@@ -69,7 +69,7 @@
                         </ul>
                     </div>
                     <div class="page-title">
-                        <img src="../svg/viewroom-title.svg" alt="">
+                        <img src="svg/viewroom-title.svg" alt="">
                     </div>
                 </div>
             </header>
@@ -126,10 +126,10 @@
         </main>
         <footer class="page-footer" data-scroll-section> 
             <div class="social-media page-fo-social">
-                <img src="../svg/ins-bla.svg" alt="">
-                <img src="../svg/snap-bla.svg" alt="">
-                <img src="../svg/youtube-bla.svg" alt="">
-                <img src="../svg/lin-bla.svg" alt="">
+                <img src="svg/ins-bla.svg" alt="">
+                <img src="svg/snap-bla.svg" alt="">
+                <img src="svg/youtube-bla.svg" alt="">
+                <img src="svg/lin-bla.svg" alt="">
             </div>
             <div class="page-fo-copyright">
                 <p>© 2022 SAPAR Gallery</p>
@@ -152,9 +152,9 @@
             </div>
         </footer>
     </div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
