--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                         </ul>
                     </div>
                     <div class="page-title">
-                        <img src="../svg/about-title.svg" alt="">
+                        <img src="svg/about-title.svg" alt="">
                     </div>
                 </div>
             </header>
@@ -97,7 +97,7 @@
                     <p data-scroll data-scroll-speed="3"><span>SAPAR Contemporary</span> has also launched a Neo-Nomad Incubator focused on the emerging art scene and cultural traditions of Central Asia. The Incubator program is headquartered in Almaty, Kazakhstan. The first edition of the Neo Nomad Incubator evolved around the notion of traditional and digital nomadism and aesthetics connected to nomadic experiences. The project explored the relationship between traditional nomadic cultures of Central Asia and Middle East, and realities of migration, globalization and hyper mobility. Current incubator efforts are  going towards unique art trends emerging in Central Asia, South East Russia and Mongolia.  SAPAR Contemporary artists' works have been featured in international Biennials and are included in private and public collections around the world; among them are the MoMA, LACMA, Art Institute of Chicago, Guggenheim, M+,  and many others.
                     </p>
                     <div class="down-arrow">
-                        <img src="../svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="4">
+                        <img src="svg/down-arrow.svg" alt="" data-scroll data-scroll-speed="4">
                     </div>
                 </div>
             </div>
@@ -124,10 +124,10 @@
 
         <footer class="page-footer" data-scroll-section> 
             <div class="social-media page-fo-social">
-                <img src="../svg/ins-bla.svg" alt="">
-                <img src="../svg/snap-bla.svg" alt="">
-                <img src="../svg/youtube-bla.svg" alt="">
-                <img src="../svg/lin-bla.svg" alt="">
+                <img src="svg/ins-bla.svg" alt="">
+                <img src="svg/snap-bla.svg" alt="">
+                <img src="svg/youtube-bla.svg" alt="">
+                <img src="svg/lin-bla.svg" alt="">
             </div>
             <div class="page-fo-copyright">
                 <p>© 2022 SAPAR Gallery</p>
@@ -150,9 +150,9 @@
             </div>
         </footer>
     </div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
