--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                         </ul>
                     </div>
                     <div class="contact-title page-title">
-                        <img src="../svg/contact-title.svg" alt="">
+                        <img src="svg/contact-title.svg" alt="">
                         <img src="img/img-30.jpg" alt="">
                     </div>
                 </div>
@@ -85,19 +85,19 @@
                             <span>Social Media: </span>
                             <ul>
                                 <li>
-                                    <img src="../svg/snap-bla.svg" alt="">
+                                    <img src="svg/snap-bla.svg" alt="">
                                     <span>Snapchat</span>
                                 </li>
                                 <li>
-                                    <img src="../svg/ins-bla.svg" alt="">
+                                    <img src="svg/ins-bla.svg" alt="">
                                     <span>Instagram</span>
                                 </li>
                                 <li>
-                                    <img src="../svg/youtube-bla.svg" alt="">
+                                    <img src="svg/youtube-bla.svg" alt="">
                                     <span>Youtube</span>
                                 </li>
                                 <li>
-                                    <img src="../svg/lin-bla.svg" alt="">
+                                    <img src="svg/lin-bla.svg" alt="">
                                     <span>Linkedin</span>
                                 </li> 
                             </ul>
@@ -111,7 +111,7 @@
                         <div class="input-container">
                             <input type="text" placeholder="Your email">
                             <div class="left-arrow">
-                                <img src="../svg/arrow.svg" alt="">
+                                <img src="svg/arrow.svg" alt="">
                             </div>
                         </div>
                     </div>         
@@ -120,10 +120,10 @@
         </main>
         <footer class="page-footer" data-scroll-section> 
             <div class="social-media page-fo-social">
-                <img src="../svg/ins-bla.svg" alt="">
-                <img src="../svg/snap-bla.svg" alt="">
-                <img src="../svg/youtube-bla.svg" alt="">
-                <img src="../svg/lin-bla.svg" alt="">
+                <img src="svg/ins-bla.svg" alt="">
+                <img src="svg/snap-bla.svg" alt="">
+                <img src="svg/youtube-bla.svg" alt="">
+                <img src="svg/lin-bla.svg" alt="">
             </div>
             <div class="page-fo-copyright">
                 <p>© 2022 SAPAR Gallery</p>
@@ -146,9 +146,9 @@
             </div>
         </footer>
     </div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
