--- a/enquire-form.html
+++ b/enquire-form.html
@@ -10,10 +10,10 @@
 <body>
     <header class="enquire-header">   
         <div class="page-title">
-            <img src="../svg/enquire-form-title.svg" alt="">
+            <img src="svg/enquire-form-title.svg" alt="">
         </div>
         <div class="close" onclick="history.back();">
-            <img src="../svg/close.svg" alt="">
+            <img src="svg/close.svg" alt="">
         </div>
     </header>
     <main data-scroll-section>
@@ -57,8 +57,8 @@
         </div>
         
     </main>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
