--- a/hambur-menu.html
+++ b/hambur-menu.html
@@ -40,8 +40,8 @@
         </div>
     </div>
     
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
