--- a/open-painting.html
+++ b/open-painting.html
@@ -10,13 +10,13 @@
 <body>
     <main data-scroll-section>
         <div class="close" onclick="history.back();">
-            <img src="../svg/close.svg" alt="">
+            <img src="svg/close.svg" alt="">
         </div>
         <div class="arr left-arr">
-            <img src="../svg/left-arr.svg" alt="">
+            <img src="svg/left-arr.svg" alt="">
         </div>
         <div class="arr right-arr">
-            <img src="../svg/right-arr.svg" alt="">
+            <img src="svg/right-arr.svg" alt="">
         </div> 
         <div class="open-paint paint-container">
             <img src="img/img-71.jpeg" alt="">
@@ -30,8 +30,8 @@
             </div>
         </div>  
     </main>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
