--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
                         </ul>
                     </div>
                     <div class="page-title">
-                        <img src="../svg/project-title.svg" alt="">
+                        <img src="svg/project-title.svg" alt="">
                     </div>
                 </div>
             </header>
@@ -99,7 +99,7 @@
                     <div class="category-name">Projects</div>
                 </div>
                 <div class="arrow" id="onsite-arrow">
-                    <img src="../svg/white-arrow.svg" alt="">
+                    <img src="svg/white-arrow.svg" alt="">
                 </div>
             </div>
             <div class="hover-title se-title-2 sweep-to-bottom">
@@ -112,7 +112,7 @@
                     <div class="category-name">Projects</div>
                 </div>
                 <div class="arrow" id="online-arrow">
-                    <img src="../svg/white-arrow.svg" alt="">
+                    <img src="svg/white-arrow.svg" alt="">
                 </div>
             </div>   
             <div class="directory">
@@ -343,17 +343,17 @@
             </div>
             <div class="bottom-text">
                 <div data-scroll data-scroll-direction="horizontal" data-scroll-speed="-3" class="big-arrow">
-                    <img src="../svg/b-arrow.svg" alt="">
+                    <img src="svg/b-arrow.svg" alt="">
                 </div>
                 <p data-scroll data-scroll-speed="2">SAPAR Contemporary Gallery + Incubator is the brainchild of Raushan Sapar and Nina Levent. The project has been in the works since 2014 while we were looking for a space that was in line with our vision. </p>
             </div>
         </main>
         <footer class="page-footer" data-scroll-section> 
             <div class="social-media page-fo-social">
-                <img src="../svg/ins-bla.svg" alt="">
-                <img src="../svg/snap-bla.svg" alt="">
-                <img src="../svg/youtube-bla.svg" alt="">
-                <img src="../svg/lin-bla.svg" alt="">
+                <img src="svg/ins-bla.svg" alt="">
+                <img src="svg/snap-bla.svg" alt="">
+                <img src="svg/youtube-bla.svg" alt="">
+                <img src="svg/lin-bla.svg" alt="">
             </div>
             <div class="page-fo-copyright">
                 <p>© 2022 SAPAR Gallery</p>
@@ -376,9 +376,9 @@
             </div>
         </footer>
     </div>
-    <script src="../js/jquery-3.6.0.min.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
